# proxy-wasm-opaque-to-jwt

./: Cargo.toml  LICENSE  Makefile  README.md
examples/: envoy-minimal.yml
src/: default.jsonnet  jwt.rs  lib.rs
