[package]
name = "proxy-wasm-opaque-to-jwt"
version = "0.1.0"
authors = ["Nick Ufer <nick@ufer.dev>"]
edition = "2018"

[lib]
name = "proxy_wasm_opaque_to_jwt"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.1.4"
jwt-simple = "0.10"
dyn-clone = "1.0.4"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.0"
serde_derive = "1.0.130"