[package]
name = "proxy-wasm-opaque-to-jwt"
version = "0.2.1"
authors = ["Nick Ufer <nick@ufer.dev>"]
edition = "2018"

[lib]
name = "proxy_wasm_opaque_to_jwt"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.0"
jwt-simple = "0.11.0"
dyn-clone = "1.0.4"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.13"
serde_urlencoded = "0.7.0"
serde_derive = "1.0.130"
jrsonnet-evaluator = "0.4.2"